[media-panel-improvements] Avoids panel vertical overflow
  Use scroll when the list of uploaded files is too big.

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -3631,6 +3631,8 @@ table.cms-articles .icon:hover {
   border: 1px solid #d3d7cf;
   padding: 10px;
   margin-bottom: 10px;
+  max-height: 550px;
+  overflow-y: auto;
 }
 
 .text-editor-sidebar .header {
@@ -3657,7 +3659,7 @@ table.cms-articles .icon:hover {
   border: 1px solid #d3d7cf;
   color: black;
   padding: 4px;
-	background: white;
+  background: white;
 }
 .text-editor-sidebar .icon-loading {
   background-image: url(../images/loading-small.gif);
@@ -3735,15 +3737,15 @@ table.cms-articles .icon:hover {
 .text-editor-sidebar .items .image-controls,
 .view-all-media .image-controls {
   display: none;
-	position: absolute;
-	top: 5px;
-	left: 5px;
+  position: absolute;
+  top: 5px;
+  left: 5px;
   line-height: 16px;
 }
 
 .text-editor-sidebar .items .item:hover .image-controls,
 .view-all-media .item:hover .image-controls {
-	display: block;
+  display: block;
 }
 
 .view-all-images .item:hover .image-controls {
@@ -3752,15 +3754,15 @@ table.cms-articles .icon:hover {
 
 .text-editor-sidebar .items .file-controls,
 .view-all-media .file-controls {
-	margin-top: 5px;
+  margin-top: 5px;
 }
 
 .text-editor-sidebar .items .image-controls .icon-zoom,
 .view-all-media .image-controls .icon-zoom  {
-	background-image: url(../images/zoom-dark.png);
-	display: block;
-	width: 0px;
-	margin-top: 4px;
+  background-image: url(../images/zoom-dark.png);
+  display: block;
+  width: 0px;
+  margin-top: 4px;
 }
 
 .text-editor-sidebar .media-upload-error {
